--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "aiofiles>=25.1.0",
+    "fastapi>=0.119.0",
+    "python-multipart>=0.0.20",
+    "requests>=2.32.5",
+    "uvicorn[standard]>=0.37.0",
+]
