--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "aiofiles>=25.1.0",
+    "elevenlabs>=2.18.0",
     "fastapi>=0.119.0",
+    "google-genai>=1.45.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.5",
     "uvicorn[standard]>=0.37.0",
