impl multi user connection with mesh signalling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.119.0",
     "google-genai>=1.45.0",
     "python-multipart>=0.0.20",
+    "python-socketio>=5.14.2",
     "requests>=2.32.5",
     "uvicorn[standard]>=0.37.0",
 ]
