--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "elevenlabs>=2.18.0",
     "fastapi>=0.119.0",
     "google-genai>=1.45.0",
+    "openai-whisper>=20250625",
     "python-multipart>=0.0.20",
     "python-socketio>=5.14.2",
     "requests>=2.32.5",
+    "soundfile>=0.13.1",
     "uvicorn[standard]>=0.37.0",
 ]
